# rust-genie

./: Cargo.toml  README.md
src/: main.rs
